--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@compound-finance/compound-js": "^0.2.5",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
