--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@compound-finance/compound-js": "^0.2.5",
+    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "next": "10.0.7",
     "react": "17.0.1",
